--- a/netflix-ui/package.json
+++ b/netflix-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "netflix-ui",
-  "homepage": "https://amolmaskare.github.io/netflix-clone",
+  "homepage": "https://amolmaskare.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
